# mockDbGenerator

./: .gitignore  DOCUMENTATION.md  README.md  copy_python_files.ps1  mockDbGenerator.py  sample.json
.github/workflows/: cmake.yml
dataGenerators/: generators.py
mockDbGeneratorUI/mockDbGeneratorUI/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mockattribute.cpp  mockattribute.h  mocktable.cpp  mocktable.h  resources.qrc
mockDbGeneratorUI/mockDbGeneratorUI/resources/: mockDbGeneratorUI.rc
structureReader/: reader.py
typeWrappers/: types.py
